--- a/api/package.json
+++ b/api/package.json
@@ -7,8 +7,8 @@
   "author": "Kevin George",
   "license": "ISC",
   "scripts": {
-    "dev": "npm run check-setup && cross-env NODE_ENV=development webpack --config ./config/webpack/webpack.config.js",
-    "build": "npm run check-setup && cross-env NODE_ENV=production webpack --config ./config/webpack/webpack.config.js",
+    "dev": "npm run check-setup && cross-env NODE_ENV=development webpack --config ./internals/config/webpack/webpack.config.js",
+    "build": "npm run check-setup && cross-env NODE_ENV=production webpack --config ./internals/config/webpack/webpack.config.js",
     "start": "node build/server.bundle.js",
     "test": "jest",
     "check-setup": "node internals/scripts/checkNodeSetup.js",
@@ -32,7 +32,7 @@
     "@typescript-eslint/parser": "^4.13.0",
     "babel-jest": "^26.6.3",
     "cross-env": "^7.0.3",
-    "dotenv-webpack": "^6.0.0",
+    "dotenv": "^8.2.0",
     "eslint": "^7.17.0",
     "eslint-config-prettier": "^7.1.0",
     "eslint-plugin-import": "^2.22.1",
