--- a/api/.vscode/settings.json
+++ b/api/.vscode/settings.json
@@ -1,5 +1,8 @@
 {
     "editor.codeActionsOnSave": {
         "source.fixAll.eslint": true
+    },
+    "files.exclude": {
+        "**/index.ts": true
     }
 }
