--- a/webapp/.babelrc
+++ b/webapp/.babelrc
@@ -1,37 +1,40 @@
 {
-    "env": {
-        "production": {
-          "plugins": ["transform-react-remove-prop-types"]
+  "env": {
+      "production": {
+        "plugins": ["transform-react-remove-prop-types"]
+      }
+    },
+  "presets": [
+      [
+          "@babel/preset-env", 
+          {
+              "targets": {
+                  "node": "current"
+              }
+          }
+      ],
+      "@babel/preset-react",
+      "@babel/preset-typescript"
+  ],
+  "plugins": [
+      ["babel-plugin-styled-components", {
+        "pure": true
+      }],
+      "@babel/plugin-proposal-class-properties",
+      "react-hot-loader/babel",
+      [
+        "react-intl",
+        {
+          "idInterpolationPattern": "[sha512:contenthash:base64:6]",
+          "extractFromFormatMessageCall": true,
+          "ast": true
         }
-      },
-    "presets": [
-        [
-            "@babel/preset-env", 
-            {
-                "targets": {
-                    "node": "current"
-                }
-            }
-        ],
-        "@babel/preset-react",
-        "@babel/preset-typescript"
-    ],
-    "plugins": [
-        "@babel/plugin-proposal-class-properties",
-        "react-hot-loader/babel",
-        [
-          "react-intl",
-          {
-            "idInterpolationPattern": "[sha512:contenthash:base64:6]",
-            "extractFromFormatMessageCall": true,
-            "ast": true
-          }
-        ],
-        [
-          "@babel/plugin-transform-runtime",
-          {
-            "regenerator": true
-          }
-        ]
+      ],
+      [
+        "@babel/plugin-transform-runtime",
+        {
+          "regenerator": true
+        }
       ]
-  }
+    ]
+}
