--- a/webapp/package.json
+++ b/webapp/package.json
@@ -17,6 +17,7 @@
     },
     "dependencies": {
         "@apollo/client": "^3.3.6",
+        "@hot-loader/react-dom": "^17.0.1",
         "@reach/router": "^1.3.4",
         "graphql": "^15.4.0",
         "graphql-tag": "^2.11.0",
@@ -24,12 +25,26 @@
         "react-dom": "^17.0.1",
         "react-helmet-async": "^1.0.7",
         "react-intl": "^5.10.16",
-        "styled-components": "^5.2.1"
+        "styled-components": "^5.2.1",
+        "workbox-cacheable-response": "^6.0.2",
+        "workbox-expiration": "^6.0.2",
+        "workbox-precaching": "^6.0.2",
+        "workbox-routing": "^6.0.2",
+        "workbox-strategies": "^6.0.2"
     },
     "devDependencies": {
         "@babel/core": "^7.12.10",
+        "@babel/plugin-transform-runtime": "^7.12.10",
         "@babel/preset-env": "^7.12.11",
+        "@babel/preset-react": "^7.12.10",
         "@babel/preset-typescript": "^7.12.7",
+        "@babel/runtime": "^7.12.5",
+        "babel-jest": "^26.6.3",
+        "babel-loader": "^8.2.2",
+        "babel-plugin-react-intl": "^8.2.21",
+        "babel-plugin-styled-components": "^1.12.0",
+        "babel-plugin-transform-class-properties": "^6.24.1",
+        "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
         "@types/jest": "^26.0.20",
         "@types/node": "^14.14.20",
         "@types/reach__router": "^1.3.6",
@@ -39,8 +54,6 @@
         "@types/styled-components": "^5.1.7",
         "@typescript-eslint/eslint-plugin": "^4.13.0",
         "@typescript-eslint/parser": "^4.13.0",
-        "babel-jest": "^26.6.3",
-        "babel-plugin-react-intl": "^8.2.21",
         "clean-webpack-plugin": "^3.0.0",
         "compression-webpack-plugin": "^7.1.2",
         "copy-webpack-plugin": "^7.0.0",
@@ -56,6 +69,7 @@
         "eslint-plugin-react-hooks": "^4.2.0",
         "eslint-plugin-simple-import-sort": "^7.0.0",
         "file-loader": "^6.2.0",
+        "fork-ts-checker-webpack-plugin": "^6.1.0",
         "html-webpack-plugin": "^5.0.0-alpha.15",
         "http-server": "^0.12.3",
         "husky": "^5.0.1",
